RabbitProducerDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myrabbitproducer
  annotations:
   konghq.com/plugins: five-per-min
spec:
  selector:
    matchLabels:
      app: myrabbitproducer
  template:
    metadata:
      labels:
        app: myrabbitproducer
    spec:
      containers:
      - name: myrabbitproducer
        image: txcai/myrabbitproducer:3.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: myrabbitproducer
spec:
  type: NodePort
  selector:
    app: myrabbitproducer
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 31500
