hellodeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello
spec:
 replicas: 3
 selector:
   matchLabels:
     app: hello
 template:
   metadata:
     labels:
       app: hello
   spec:
     containers:
     - name: hello
       image: gcr.io/google-samples/hello-app:1.0
---
apiVersion: v1
kind: Service
metadata:
 name: hello
 annotations:
   konghq.com/plugins: five-per-min
spec:
 selector:
   app: hello
 ports:
 - port: 80
   targetPort: 8080
